cabal-version: 3.0
name: xml-parser
version: 0.1.1.1
synopsis: XML parser with informative error-reporting and simple API
homepage: https://github.com/nikita-volkov/xml-parser
bug-reports: https://github.com/nikita-volkov/xml-parser/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2021 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/xml-parser.git

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    XmlParser

  other-modules:
    XmlParser.AstParser
    XmlParser.Attoparsec
    XmlParser.ElementDestructionState
    XmlParser.NameMap
    XmlParser.NamespaceRegistry
    XmlParser.NodeConsumerState
    XmlParser.Prelude
    XmlParser.TupleHashMap
    XmlParser.XmlConduitWrapper

  build-depends:
    attoparsec >=0.13 && <0.15,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.14,
    containers ^>=0.6,
    hashable >=1.2 && <2,
    text >=1.2.4 && <3,
    text-builder >=0.6.6.2 && <0.7,
    transformers >=0.5 && <0.8,
    unordered-containers ^>=0.2.14,
    xml-conduit ^>=1.9.1.1,

test-suite test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
  build-depends:
    QuickCheck >=2.8.1 && <3,
    attoparsec >=0.13 && <0.15,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase >=1.6.1 && <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
    xml-conduit,
    xml-parser,
