cabal-version: 3.0
name: xml-types-parser
version: 0.1
synopsis: Parser of xml-types AST
homepage: https://github.com/nikita-volkov/xml-types-parser
bug-reports: https://github.com/nikita-volkov/xml-types-parser/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2021 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: git://github.com/nikita-volkov/xml-types-parser.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -funbox-strict-fields
  exposed-modules:
    XmlTypesParser
  other-modules:
    XmlTypesParser.Prelude
  build-depends:
    base >=4.11 && <5,
    text >=1.2.4 && <2,
    xml-types ^>=0.3.8,
