cabal-version: 3.0
name: xml-unscrambler
version: 0.1
synopsis: XML parser with powerful error-reporting and simple API
homepage: https://github.com/nikita-volkov/xml-unscrambler
bug-reports: https://github.com/nikita-volkov/xml-unscrambler/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2021 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: git://github.com/nikita-volkov/xml-unscrambler.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -funbox-strict-fields
  exposed-modules:
    XmlUnscrambler
  other-modules:
    XmlUnscrambler.AstParser
    XmlUnscrambler.NameMap
    XmlUnscrambler.TupleHashMap
    XmlUnscrambler.Prelude
  build-depends:
    attoparsec >=0.13 && <0.15,
    base >=4.11 && <5,
    bytestring >=0.10 && <0.12,
    data-default-class ^>=0.1.2,
    hashable >=1.2 && <2,
    text >=1.2.4 && <2,
    transformers ^>=0.5,
    unordered-containers ^>=0.2.14,
    xml-conduit ^>=1.9.1.1,
